--- a/index.html
+++ b/index.html
@@ -764,7 +764,7 @@
     <!-- Navigation -->
     <header>
         <nav>
-            <div class="logo">🔥 FireBot LK</div>
+            <div class="logo">🔥 Smart Firefighting Robot LK</div>
             <ul class="nav-links" id="navLinks">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#overview">Overview</a></li>
@@ -1176,4 +1176,5 @@
         });
     </script>
 </body>
+
 </html>
